@@ -1,5 +1,5 @@
 ========================================================================
-README for LiDAR Viewer version 2.21
+README for LiDAR Viewer version 2.22
 Copyright (c) 2004-2025 Oliver Kreylos
 ========================================================================
 
