@@ -1,2 +1,2 @@
-LiDAR Viewer 2.21
+LiDAR Viewer 2.22
 release date TBD
